# agentlens

./: .env.example  .gitignore  README.md  conftest.py  example.py  example_claude.py  example_eval.py  example_my_agent.py  load_env.ps1  pyproject.toml
.github/workflows/: ci.yml
agentlens/: __init__.py  evaluation.py  metrics.py
agentlens_eval/: __init__.py  detectors.py  evaluation.py  metrics.py  report.py  testing.py  trace.py
site/: docs.html  index.html
site/assets/: main.js  style.css
tests/: test_agent_eval.py  test_detectors.py  test_library_smoke.py  test_llm_judge.py  test_metrics.py  test_real_agent.py
